fixed overflowing answer text
also making a new selection clears the answer and pictogram

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
 		<p id="objectBuildingEntry">
 		How many 
-			<select id="objectSelect"></select>
+			<select id="objectSelect" onchange="return clearAnswer();"></select>
 		can you fit in 
-			<select id="buildingSelect"></select>
+			<select id="buildingSelect" onchange="return clearAnswer();"></select>
 		?
 		</p>
 
