corrected some volumes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<div id="mainSection">
 		<h1>HOW MANY WHALES IN WALES?</h1>
-		<h3>See how many objects you can fit in a building!</h3>
+		<h3>See how many things you can fit in a thing!</h3>
 
 		<p id="objectBuildingEntry">
 		How many 
@@ -35,6 +35,10 @@
 
 		<div id="pictogram">
 		</div>
+	</div>
+
+	<div id="references">
+		
 	</div>
 
 	<footer>BY JACK, ADAM, LUKE AND ISAAC FOR FESTIVAL OF CODE 2015</footer>
