added references and optimisations

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	</div>
 
 	<div id="references">
-		<a href="http://festival.yrs.io/"><img src="FoCLogo.png" id="FoCLogo"></a>
+		<a href="http://festival.yrs.io/"><img src="FoCLogo-white.png" id="FoCLogo"></a>
 		<a href="http://donate.wikimedia.org"><img src="WikipediaLogo.png" id="WikipediaLogo"></a>
 	</div>
 
